recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.8)
 required: Int
    spiral(150,70,0,0.8)
                    ^